stylesheets/style.css
/*
   style.css
   blog

   Created by Nicolas Cavigneaux on 2010-12-21.
   Copyright 2010 Bounga. All rights reserved.
*/

/* Defaults */
body {
	margin: 0;
	padding: 0;
	background: #0D1A26 url(/images/body-bg.png) repeat-x top;
	color: #050A0F;
	font: 62.5% "Droid Sans", "Trebuchet MS", Helvetica, sans-serif;
}
h1,h2, h3, h4 {
	margin: 1em 0 0 0;
	padding: 0;
}
h2 {
	font-size: 1.4em;
}
h3 {
	font-size: 1.2em;
}
h4 {
	font-size: 1em;
}
a {
	display: inline-block;
	color: #336699;
	text-decoration: none;
	background: transparent;
  border: 0;
}
a:visited {
color:#2B5782;
}
a:hover, a:active, a:focus {
  text-decoration: underline;
}
a img {
	border: none;
}
pre {
	overflow: auto;
	width: 95%;
	height: auto;
}
*>pre {
	width: 100%;
}
.left {
	float: left;
}
.right {
	float: right;
}

/* Layout */
#page {
	font-size: 1.3em;
}
header {
	position: relative;
	width: 800px;
	padding: 0;
	margin: 50px auto 0 auto;
	height:120px;
  background-image:url(/images/page-t.png);
  display:block;
}
header h1 {
  font-size:6.2em;
  font-family:"Chewy", Impact, Charcoal, sans-serif;
	text-shadow: 4px 4px 4px #aaa;
  left:0px;
  width:auto;
}
header h1 a, header h1 a:visited, header h1 a:hover {
	color: #E1E8E6;
	text-decoration: none;
}
#wrapper {
	width: 800px;
	overflow: hidden;
	margin: 0 auto 0 auto;
	padding: 20px 0;
	background-color: #fff;
	border-radius:15px;
}
#main {
	width: 500px;
	float: left;
	padding: 0 25px;
}
#main #pagination {
  clear:both;
}
footer {
	clear: both;
	padding: 30px 0 0 0;
	display:block;
}
footer p {
	margin: 0 auto;
	padding: 10px 0 20px;
	background-color: #14140F;
	color: #FFFFFF;
	text-align: center;
	font-size: 1.2em;
}
footer p a, footer p a:visited {
	color: #6d8824;
}

/* Sidebar styles */
aside {
	width: 200px;
	float: right;
	padding: 1px 25px;
}
aside h2 {
	margin: 0;
	font-family:"Chewy", Helvetica, sans-serif;
	font-size:1.5em;
	color:#336699;
}
aside h3 {
	margin: 1em 0 0.5em;
	font-family:"Chewy", Helvetica, sans-serif;
	font-size:1.2em;
	color:#737300;
}
aside ul {
	list-style: none;
	margin: 1em 0;
	padding: 0;
	border-top: 1px solid #E6E6CD;
}
aside li {
	display: block;
	margin: 0;
	padding: 4px 0;
	border-bottom: 1px solid #E6E6CD;
}
.read-it a, .read-it a:visited, .post-tags li a, .post-tags li a:visited, aside li a, aside li a:visited {
	color: #311C0D;
	text-decoration: none;
  border-radius: 4px;
  -moz-transition-duration: 0.25s;
  -webkit-transition-duration: 0.25s;
  -o-transition-duration: 0.25s;
  transition-duration: 0.25s;
}
.read-it a:hover, .post-tags li a:hover, aside li a:hover {
	background: #33669d;
	color: #fff;
	text-decoration: none;
}
aside .syndicate ul {
	border-top: none;
}
aside .syndicate li {
	border-bottom: none;
}
aside .tags ul {
	border-top: none;
	font-size: 1.1em;
	text-align: justify;
}
aside .tags ul li {
	display: inline;
	background: none;
	margin: 0;
	padding: 0;
	border: none;
	line-height: 1.8em;
}
.tag0 { font-size: 75%; }
.tag10 { font-size: 80%; }
.tag20 { font-size: 90%; }
.tag30 { font-size: 100%; }
.tag40 { font-size: 110%; }
.tag50 { font-size: 120%; }
.tag60 { font-size: 140%; }
.tag70 { font-size: 150%; }
.tag80 { font-size: 160%; }
.tag90 { font-size: 170%; }
.tag100 { font-size: 180%; }
#search fieldset {
	border: none;
	margin: 0;
	padding: 0;
}
#q {
	border: 1px solid #bfbfbf;
	width: 150px;
	color: #6b6b6b;
}
#search input, #search .submit {
	color:#311C0D;
}
#search .submit {
	padding: 0;
	border: 1px solid #fff;
	background: none;
	font-weight: bold;
	color: #6b6b6b;
	text-transform: uppercase;
}
#search .submit:hover {
	background: #336699;
	color: #fff;
	border: 1px solid #336699;
	border-radius: 5px;
}
a.feed {
	background: transparent url(/images/feed.png) no-repeat 0 0.25em;
	padding: 5px 0 5px 22px;
}

/* Post content
-------------------------------------------------------- */
.post {
	margin: 0 0 2em 0;
}
.post-title {
	color:#A2210D;
	font-size:2.0em;
}
.post-title a, .post-title a:visited {
	color:#A2210D;
}
.read-it {
	float: right;
	clear: left;
}
.post-content {
	margin-top: 1em;
}
.post-content acronym {
	cursor: help;
	border-bottom: 1px dotted #666;
}
.post-content pre {
	font: 1.1em 'Droid Sans', 'courier new', courier, monospace;
	border: solid 1px #cccccc;
 	border-right: dashed 2px #cccccc;
	margin: 1em 0;
	padding: 0.7em;
	display: block;
	z-index: 9999;
	overflow: hidden;
	color: white;
	background-color: #0d1a26;
	width: 500px;
	transition: width 1s ease-out;
	-moz-transition: width 1s ease-out;
	-webkit-transition: width 1s ease-out;
	-o-transition: width 1s ease-out;
}
.post-content pre:hover {
	overflow: visible;
  border-right: solid 1px #cccccc;
  width: 730px;
}
.post-content ul, .post-content ol {
	margin: 0 0 0.5em 0;
	padding: 0 0 0 30px;
}
.post-content li {
	margin: 0;
	padding: 0;
}
.post-content blockquote {
	margin: 4px 0 4px 0;
	padding: 0 5px;
	border-left: 4px solid #bfbfbf;
}
.post-content img {
  width:100%;
}
.post-content h1, .post-content h2, .post-content h3 {
	color: #369;
}
.post-content h1 {
	font-size: 1.7em;
}
.post-content h2 {
	font-size: 1.3em;
}
.post-content h3 {
	font-size: 1.0em;
}
.post-tags {
	list-style: none;
	margin: 1em 0 0 0;
	padding: 3px 0;
}
.post-tags li {
	display: inline;
	margin-right: 8px;
	padding: 5px 0 5px 22px;
	background: transparent url(/images/tag.png) no-repeat 0 70%;
}
#attachments h3 {
	font-size: 1.2em;
}
#attachments ul {
	list-style: none;
	margin: 0;
	padding: 4px 0;
}
#attachments li {
	margin: 0 0 0.6em;
	padding: 2px 10px 2px 18px;
	background: transparent url(/images/attach.png) no-repeat 0 50%;
}
#attachments li object {
	display: inline;
	margin: 0;
	padding: 0;
	vertical-align: bottom;
}

/* Disqus comments and trackbacks
-------------------------------------------------------- */
h3.comments {
	background: transparent url(/images/comment.png) no-repeat 0 50%;
	padding-left: 20px;
}
#dsq-content .dsq-item-trackback {
	background: transparent url(/images/trackback.png) no-repeat 230px 50%;
}

.fb_edge_widget_with_comment span.fb_edge_comment_widget iframe.fb_ltr {
display: none !important;}

